# pykrx-free

./: .coderabbit.yaml  .gitignore  ARCHITECTURE.md  DESIGN.md  LICENSE  README.md  krx_briefing_fetch.py  krx_dart.py  krx_login.py  krx_screener_api.py  portfolio.json.example  pyproject.toml  register_krx_task.bat  register_krx_task.ps1  requirements.txt  run_morning.ps1
config/: digest_rules.json
docs/: DESIGN.md  HERMES_CONTRACT.md
krxfree/: __init__.py  briefing_generator.py  paths.py  portfolio_engine.py  screener.py  state.py
krxfree/clients/: dart.py  macro.py  naver.py  news.py
krxfree/processors/: __init__.py  investment_case_processor.py  knowledge_io.py  knowledge_merge_processor.py  pipeline.py  registry.py  summary_processor.py  tags.py  timeline_processor.py
krxfree/search/: __init__.py  engine.py  index.py
krxfree/search/backends/: base.py  keyword_backend.py
